Incorporate Dilithium sign scheme into TPM API
- The Dilithium cryptographical functions live in CryptDilithium*
files.
- Size of the NV memory, Context and IO buffer were increased to
accomodate the Dilithium key size (original sizes were kept
albeit commented)

Known Bugs:
- Key Generation doesn't use deterministic RNG state
- SHA3 isn't implemented in the TPM, which the Dilithium algorithm
requires. Therefore, there is an independent implementation untethered
from the TPM simulator. This also means the Dilithium algorithm
re-hashes the digest.

--- a/src/makefile-common
+++ b/src/makefile-common
@@ -90,6 +90,7 @@ HEADERS = 				\
 	CryptHash.h			\
 	CryptHashData.h			\
 	CryptHash_fp.h			\
+	CryptDilithium_fp.h \
 	CryptPrimeSieve_fp.h		\
 	CryptPrime_fp.h			\
 	CryptRand.h			\
@@ -289,6 +290,7 @@ HEADERS = 				\
 	dilithium-sign.h \
 
 OBJFILES = \
+	CryptDilithium.o \
 	dilithium-ntt.o \
 	dilithium-packing.o \
 	dilithium-poly.o \
