Finalize Kyber support
This commit adds Kyber KEM support to the TPM simulator. New commands
were added to TPM and two internal TPM APIs were updated with added
support for Kyber.

The internal updated APIs were CryptSecretEncrypt/Decrypt, CryptStartup,
CryptInit, CryptIsAsymDecrytScheme, CryptIsUniqueSizeValid,
CryptIsSensitiveSizeValid, CryptValidateKeys and CryptCreateObject.

The new Kyber commands are:
* TPM2_Kyber_Enc => Kyber key encapsulation
* TPM2_Kyber_Dec => Kyber key decapsulation
* TPM2_Kyber_Ephemeral => Create a kyber ephemeral key, i.e., the key is
not associated with any hierarchy already present in the TPM
* TPM2_Kyber_2Phase_KEX => Perform 2nd phase of kyber mutually
authenticated key exchange with forward secrecy.
* TPM2_Kyber_3Phase_KEX => Perform 3rd, and final, phase of kyber mutually
authenticated key exchange with forward secrecy.

--- a/src/makefile-common
+++ b/src/makefile-common
@@ -269,6 +269,9 @@ HEADERS = 				\
 	_TPM_Hash_Start_fp.h		\
 	_TPM_Init_fp.h			\
 	swap.h				\
+	Kyber_2Phase_KEX_fp.h \
+	Kyber_3Phase_KEX_fp.h \
+	Kyber_Ephemeral_fp.h \
 					\
 	ntc2lib.h			\
 	ntc2_fp.h \
